--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<!-- 模块信息 -->
 	<groupId>cn.xuyingqi</groupId>
 	<artifactId>socket</artifactId>
 	<version>0.0.1</version>
@@ -9,15 +10,19 @@
 	<name>Socket</name>
 	<url>http://maven.apache.org</url>
 
+	<!-- 公共配置 -->
 	<properties>
+		<project.build.jdk.version>1.8</project.build.jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<xuyingqi.version>0.0.1</xuyingqi.version>
 
 		<maven-compiler-plugin.version>3.5</maven-compiler-plugin.version>
-		<jdk.version>1.8</jdk.version>
+		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
 	</properties>
 
+	<!-- 依赖包 -->
 	<dependencies>
 		<dependency>
 			<groupId>cn.xuyingqi</groupId>
@@ -28,16 +33,69 @@
 	</dependencies>
 
 	<build>
+		<!-- 除src/main/java外的源码包 -->
+		<resources>
+			<!-- 设置对src/main/java内的properties,xml不过滤,打包时包含 -->
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+				</includes>
+				<filtering>false</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/config</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+
+		<!-- 插件 -->
 		<plugins>
+			<!-- maven编译插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
+					<!-- 源码版本 -->
+					<source>${project.build.jdk.version}</source>
+					<!-- 目标版本 -->
+					<target>${project.build.jdk.version}</target>
+					<!-- 编码格式 -->
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
+			</plugin>
+			<!-- maven单元测试插件 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<configuration>
+					<!-- 跳过测试 -->
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+
+			<!-- maven打jar包插件 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
+				<configuration>
+					<!-- 分类器,若不配置此项,则在本地仓库中仅生成war而不生成jar -->
+					<classifier>java</classifier>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
