--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 
 		<xuyingqi.version>0.0.1</xuyingqi.version>
 
+		<javax.servlet.version>3.0-alpha-1</javax.servlet.version>
+
 		<maven-compiler-plugin.version>3.5</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
 		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
@@ -29,6 +31,12 @@
 			<artifactId>util</artifactId>
 			<version>${xuyingqi.version}</version>
 			<classifier>java</classifier>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>${javax.servlet.version}</version>
 		</dependency>
 	</dependencies>
 
