--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 		<xuyingqi.version>0.0.1</xuyingqi.version>
 
-		<javax.servlet.version>3.0-alpha-1</javax.servlet.version>
+		<dom4j.version>1.6.1</dom4j.version>
 
 		<maven-compiler-plugin.version>3.5</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
@@ -34,9 +34,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>${javax.servlet.version}</version>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>${dom4j.version}</version>
 		</dependency>
 	</dependencies>
 
