--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>cn.xuyingqi</groupId>
-			<artifactId>util</artifactId>
+			<artifactId>net</artifactId>
 			<version>${xuyingqi.version}</version>
 			<classifier>java</classifier>
 		</dependency>
